# DarhonFinance

./: CMakeLists.txt  README.md  accountedit.cpp  accountedit.h  accountedit.ui  accountinfo.cpp  accountinfo.h  accountinfo.ui  accountsview.cpp  accountsview.h  accountsview.ui  amounteditor.cpp  amounteditor.h  basedelegate.cpp  basedelegate.h  budgetedit.cpp  budgetedit.h  budgetedit.ui  budgetrep.cpp  budgetrep.h  budgetrep.ui  budgetview.cpp  budgetview.h  budgetview.ui  calendar.cpp  calendar.h  calendar.ui  currencyedit.cpp  currencyedit.h  currencyedit.ui  darhonfinance_en.ts  darhonfinance_es.ts  delegatebudgetedit.cpp  delegatebudgetedit.h  delegatetransview.cpp  delegatetransview.h  dialogicons.cpp  dialogicons.h  dialogicons.ui  dr_about.cpp  (+81 more)
pkg-info/: com.darhon.drfinance.desktop  com.darhon.drfinance.metainfo.xml
